<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.NewMeeting">

    <TextView
        android:id="@+id/infoMeet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="@string/intro"/>

    <TextView
        android:id="@+id/infousers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:text="@string/mparticipants"/>
    
    <com.anurag.multiselectionspinner.MultiSpinner
        android:id="@+id/spinnerMultiSpinner"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="Select Participants"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/infolength"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:text="@string/mlength"/>

    <Spinner
        android:id="@+id/hourSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/inforoom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:text="@string/mroom"/>

    <Spinner
        android:id="@+id/roomSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/infopurpose"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:text="@string/mpurpose"/>


    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:hint="@string/mphint"/>

    <Button
        android:id="@+id/sMeeting"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="0dp"
        android:text="@string/cm"/>

    <Button
        android:id="@+id/allDone"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="0dp"
        android:text="@string/done"/>


</LinearLayout>