<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ListMeetings">

    <TextView
        android:id="@+id/infouser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:text="@string/lparticipants"/>

    <Spinner
        android:id="@+id/userSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/getUserMeetings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/getM"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layoutManager="LinearLayoutManager"/>

    <Button
        android:id="@+id/listDone"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="0dp"
        android:text="@string/done"/>


</LinearLayout>